FlightPath 7.x Changelog
========================

2024-10-12
  Was alerted to possible XSS vulnerabilities (fixing in this release) by Rauf Giray Doğan (https://github.com/redhotchilihacker1)
  
  Added convenience function filter_plain($str) to help sanitize fields which obviously should not contain HTML tags.
  
  Modified various spots in the codebase to use either filter_plain() or filter_markup() where appropriate, to mitigate
  any possible XSS vulnerabilities.
    
  Changed the way filter_markup cleans malformed HTML, so it doesn't add extra <p> tags.
  
  Fixed bug in content module where a file field in a fieldset wouldn't perform upload.
  

2024-10-11
  Fixed warning from content->title (content.module) in PHP 8.
  
  Fixed warnings in prereqs module in PHP 8 if the advising_term_id isn't set.

  Removed out of date JS code in TinyMCE module.
  
  Modified menu.inc menu_check_user_access to prevent warnings in PHP 8. 
  
  Upgraded jQuery UI to version 1.14.0.
  

2024-10-07
  Fixed CSS bug where sometimes when printing, the body of the page would appear on a different sheet than the header.
  

2024-10-04
  Modified Engagements display so that engagements are sorted by activity_datetime desc FIRST, then by vid DESC.  Otherwise, this
  caused a bug where the most recently modified was appearing first.
  
  Modified Engagements display so that emails show their subject line.

  Fixed a bug in content module, where titles were being passed through filter_markup, and consequently having <p></p> added to
  them.
  

2024-09-30
  Fixing bug when receiving SMS, where it wasn't sending full contents of SMS to non-advisor users, if set.
  
  Made a non-breaking change to modules_implement_hook() function, so we can specified modules to skip when
  checking to see which ones implement a hook.
  
  Made changes to the order in which content is loaded and saved, to make sure content is fully created before
  being passed to a hook.
  